--- a/Parte 2/Es 7 - Flexbox.css
+++ b/Parte 2/Es 7 - Flexbox.css
@@ -26,7 +26,9 @@ header {
 
 section {
     display: flex;
+    /* ordina tutti gli elementi dentro a <section> in riga*/
     flex-direction: row;
+    /* flex-direction: column; */
     flex-wrap: wrap;
 }
 
